Added strings for empty vendor products/locations
Also updated fonts across the entire site. It’s likely I missed some.
I’ll update any missing styles as I go.

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -48,6 +48,9 @@
     <div class="new-heading-style">
             Market Locations
     </div>
+    <div class="vendor-placeholder-text" ng-show="marketLocations.length == 0">
+        <p class="no-bottom-margin">You're not selling at any markets right now! Try joining one by clicking the Create Location button.</p>
+    </div>
     <!-- repeating for each location that seller has in the db -->
     <div ng-repeat="location in marketLocations" class="container-for-cards">
         <div class="card-formatting">
@@ -96,6 +99,9 @@
     <div class="new-heading-style">
             Custom Locations
     </div>
+    <div class="vendor-placeholder-text" ng-show="sellerLocations.length == 0">
+        <p class="no-bottom-margin">You haven't created any custom locations yet! Try making one by clicking the Create Location button.</p>
+    </div>    
     <!-- repeating for each location that seller has in the db -->
     <div ng-repeat="location in sellerLocations" class="container-for-cards">
         <div class="card-formatting">
@@ -166,7 +172,9 @@
         </div>
     </div>
     <hr>
-
+    <div class="vendor-placeholder-text" ng-show="sellerItems.length == 0">
+        <p class="no-bottom-margin">You haven't added any items yet! Try adding one by clicking the Create New Item button.</p>
+    </div>     
 
     <!-- repeating for each item that seller has in the db -->
      <div ng-repeat="product in sellerItems | orderBy:'name'" class="container-for-cards">
