--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -157,7 +157,16 @@
 }
 
 .header-font {
-  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.modal-title {
+  font-family: 'Libre Baskerville', serif;
+  font-weight: bold;
+}
+
+.modal-title > small {
+  font-family: 'Roboto', sans-serif !important;
 }
 
 .small-header {
@@ -168,7 +177,6 @@
   text-transform: uppercase;
   padding: 0px;
   margin-bottom: 10px;
-  padding:10px;
 }
 
 .edit-location-modal-header {
@@ -316,7 +324,8 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 40px;
-  background-color: #EEEEEE;  
+  background-color: #EEEEEE;
+  font-family: 'Roboto', sans-serif !important;;
 }
 
 .footer {
@@ -1154,7 +1163,7 @@ hr{
   padding-top: 10px;
   padding-bottom: 10px;
   font-size: 14px;
-  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
   line-height: normal;
 }
 
@@ -1302,4 +1311,9 @@ hr{
 .tag-pill:hover {
   color: white;
   background-color: #8ed41e;
+}
+
+.vendor-placeholder-text {
+  padding: 10px;
+  margin-left: 20px;
 }
