--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -19,19 +19,19 @@
         <div class="row">
 
             <!-- DISPLAY ITEMS FOR EACH CATEGORY -->
-            <div class="col-sm-10">
+            <div class="col-sm-10 col-xs-6">
               <div class="new-heading-style">
                 {{selectedCategory}}
               </div>
               <div class="row" style="padding-top:5px" id="masonry-container">
-                <div class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts | filterMultiple:productFilterExpr | unique:id" >
+                <div class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-12" ng-repeat="item in trendingProducts | filterMultiple:productFilterExpr | unique:id" >
                   <product-card data="item"></product-card>
                 </div>
               </div>
             </div>
 
             <!-- DISPLAY SIDE BAR OF ALL CATEGORIES & TAGS-->
-            <div class="col-sm-2">
+            <div class="col-sm-2 col-xs-6 tag-bar">
                 <hr>
                 <p class="small-header">Categories</p>
                 <ul class="tag-list" role="">
