--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1303,6 +1303,8 @@ hr{
   padding-right: 10px;
   padding-left: 10px;
   color: #333;
+  display: inline-block;
+  margin-bottom: 10px;
 }
 
 .tag-pill:hover {
