--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -116,7 +116,7 @@
       <div class="row">
           <div class="col-sm-4">
             <div class="map-container">
-              <div class="bl-map" be-local-map data="vendors"></div>
+              <div class="bl-map" be-local-map vendors="vendors"></div>
             </div>
           </div>
           <div class="col-sm-8" ng-repeat="vendor in vendors">
