Added map for markets.
Also changed updateMarkets.py to add (real) latitudes and longitudes
and changed “British Columbia” to “BC”.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -20,9 +20,19 @@
       </div>
 
       <br>
-      <div class="row" id="masonry-market-container">
-        <div class="col-trending ms-market-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="market in marketList" >
-          <market-card data="market"></market-card>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="no-top-margin map-container">
+            <div class="bl-map" style="margin-bottom:15px" be-local-map markets="marketList"></div>
+          </div>
+        </div> 
+
+        <div class="col-sm-8">
+          <div class="row" id="masonry-market-container">
+            <div class="col-trending ms-market-item col-md-4 col-sm-6" ng-repeat="market in marketList" >
+              <market-card data="market"></market-card>
+            </div>
+          </div>
         </div>
       </div>
     </div>
