--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -403,7 +403,7 @@ body {
 }
 
 .no-top-margin {
-  margin-top: 0px;
+  margin-top: 0px !important;
 }
 
 .container-md {
@@ -1342,13 +1342,13 @@ hr{
   margin-right: 20px;
   width: 100%;
   height: 600px;
-  border: 1px solid #DDD;
 }
 
 .map-container {
   background-color: white;
   padding: 3px;
   margin-top:15px;
+  border: 1px solid #DDD;  
 }
 
 .info-window-content {
