Fixed padding on market map.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -22,8 +22,8 @@
       <br>
       <div class="row">
         <div class="col-sm-4">
-          <div class="no-top-margin map-container">
-            <div class="bl-map" style="margin-bottom:15px" be-local-map markets="marketList"></div>
+          <div class="no-top-margin map-container" style="margin-bottom:15px">
+            <div class="bl-map" be-local-map markets="marketList"></div>
           </div>
         </div> 
 
