Changed the sign-up button to comply with facebooks standards

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -17,6 +17,7 @@
                     <div class="inner cover">
                         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
                         <p class="lead">be<span class="beLocal-highlight">Local</span> connects you with the food grown around you. <br>To begin browsing without creating an account, click Get Started below.</p>
+
                         <p class="lead">
                             <a ng-click="getStarted()" class="btn btn-lg btn-default-welcome">Get Started</a>
                         </p>
@@ -46,7 +47,7 @@
                             </div>
                             <br><br>
                             <p class="lead">
-                                <a ng-click="signUpAsCustomer()" class="btn btn-lg btn-default-welcome"><i class="fa fa-facebook-square"></i> Sign Up as a Customer</a>
+                                <a ng-click="signUpAsCustomer()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up as a Customer</a>
                             </p>
                         </div>
                     </div>
@@ -75,7 +76,7 @@
                             </div>
                             <br><br>
                             <p class="lead">
-                                <a ng-click="signUpAsVendor()" class="btn btn-lg btn-default-welcome"><i class="fa fa-facebook-square"></i> Sign Up as a Farmer</a>
+                                <a ng-click="signUpAsVendor()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square" style="font-size:30px;"></i> Sign Up as a Farmer</a>
                             </p>
                         </div>
                     </div>
