--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -11,6 +11,25 @@ body {
     url('../images/sellerbanner-peas.jpg') !important;
 }
 
+.facebook-button{
+  background: #4A65BB;
+  background-image: -webkit-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: -moz-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: -ms-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: -o-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: linear-gradient(to bottom, #4A65BB, #3b54A3);
+}
+
+.facebook-button:hover{
+  background: #5877D7;
+  background-image: -webkit-linear-gradient(top, #5877D7, #4863b6);
+  background-image: -moz-linear-gradient(top, #5877D7, #4863b6);
+  background-image: -ms-linear-gradient(top, #5877D7, #4863b6);
+  background-image: -o-linear-gradient(top, #5877D7, #4863b6);
+  background-image: linear-gradient(to bottom, #5877D7, #4863b6);
+  color: #FFFFFF !important;
+}
+
 .cover-heading{
   font-family: 'Libre Baskerville', serif;
   font-weight: bolder;
