--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -49,7 +49,7 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="map-container">
-                <div class="bl-map" be-local-map vendors="vendorDetails" markets="vendorDetails.markets"></div>
+                <div class="bl-map" be-local-map locations="vendorDetails.selling_locations" markets="vendorDetails.markets"></div>
             </div>
         </div>    
         <div class="col-sm-8">
