Fixed another pluralized string.

--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -155,7 +155,7 @@
     <hr>
     <div class="row">
         <div class="col-xs-9 new-hr-heading-style">
-            {{vendorDetails.products.length}} PRODUCTS
+            {{vendorDetails.products.length}} PRODUCT<span ng-hide="vendorDetails.products.length === 1">S</span>
         </div>
     </div>
     <hr>
