--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -594,6 +594,7 @@ body {
 .beLocal-btn-filled:hover {
   background-color: #89cc1d;
   color: white;
+  text-shadow: 0 0px 0px rgba(255,255,255,0.5) !important;
 }
 
 /* VENDOR CARD STUFF */
