Made the front splash screen mostly responsive

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="tab-pane" id="vendors">
                     <div class="inner cover">
-                        <h1 class="cover-heading">For Farmers and Local Foodmakers</h1>
+                        <h1 class="cover-heading">For Farmers & Foodmakers</h1>
                         <span>
                             <p class="how-it-works">How It Works</p>
                         </span>
@@ -87,7 +87,7 @@
             </div>
             <div class="mastfoot">
                 <div class="inner">
-                    &copy; 2014 beLocal Victoria
+                    <!-- &copy; 2014 beLocal Victoria -->
                 </div>
             </div>
         </div>
