--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -8,7 +8,7 @@ html {
       rgba(0, 0, 0, 0.5), 
       rgba(0, 0, 0, 0.5)
     ), 
-    url('http://inn2thewoods.com/Images/Gallery/Hi-Res/Gallery__Fresh_Produce_at_the_Seasonal_Farmers_Market.jpg') !important;
+    url('http://images.neverendingvoyage.com/wp-content/uploads/2014/07/delicious-istanbul-cooking-class-2.jpg') !important;
 /*    url('../images/sellerbanner-peas.jpg') !important;*/
     background-size: cover !important;
 
@@ -109,7 +109,7 @@ body {
   margin: 30px !important;
   height: 90%;
   text-shadow: 0 1px 3px rgba(255,255,255,0.5);
-  border-radius: 25px;
+  border-radius: 10px;
   text-align: center;
   max-width: 1100px;
   background:rgba(255,255,255,0.8) !important;
@@ -180,9 +180,6 @@ body {
   .masthead-brand {
     float: left;
   }
-  .masthead-nav {
-    float: right;
-  }
 }
 
 /*
@@ -212,6 +209,10 @@ body {
  * BeLocal Button
  */
 
+.btn {
+    text-shadow: 0 0px 0px rgba(0,0,0,0) !important;
+}
+
 .beLocal-btn-filled {
   background-color: #8ed41e !important;
   color: white !important;
@@ -226,15 +227,17 @@ body {
  * Affix and center
  */
 
+
+.mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
+
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
     position: fixed;
     top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
@@ -248,11 +251,22 @@ body {
   }
 }
 
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 992px;
+@media (min-width: 1100px) {
+
+  body{
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
+
 }
+
+@media (max-width: 500px) {
+
+  body{
+    height: auto;
+  }
+
+
+}
+
 
