--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -8,14 +8,35 @@ html {
       rgba(0, 0, 0, 0.5), 
       rgba(0, 0, 0, 0.5)
     ), 
-    url('http://images.neverendingvoyage.com/wp-content/uploads/2014/07/delicious-istanbul-cooking-class-2.jpg') !important;
-/*    url('../images/sellerbanner-peas.jpg') !important;*/
+    url('/images/splashpage.jpg') 
+    no-repeat center center fixed !important;
     background-size: cover !important;
 
 }
 
-p{
+p {
   color: #696969 !important;
+}
+
+h1 {
+  margin-top: 0px !important;
+}
+.fa-facebook-square {
+  padding-right:5px;
+}
+
+.content-container {
+  max-width: 650px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
+}
+
+.getting-started-font{
+  font-family: 'Libre Baskerville', serif;
+  color: #333333 !important;
+  font-size: 21px;
+  margin-bottom: 0px !important;
 }
 
 .facebook-button{
@@ -107,7 +128,8 @@ html{
 
 body {
   margin: 30px !important;
-  height: 90%;
+  min-height: 90%;
+  height:auto;
   text-shadow: 0 1px 3px rgba(255,255,255,0.5);
   border-radius: 10px;
   text-align: center;
@@ -136,7 +158,7 @@ body {
 
 /* Padding for spacing */
 .inner {
-  padding: 30px 10px 10px 10px;
+  padding: 10px 15px 10px 15px;
 }
 
 
@@ -181,21 +203,9 @@ body {
     float: left;
   }
   .masthead-nav {
-    /*float: right;*/
-    margin-right: auto;
+    float: right;
+    margin-right: 0px;
   }
-}
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
 }
 
 
@@ -207,6 +217,9 @@ body {
   color: #FFF; /* IE8 proofing */
   color: rgba(255,255,255,0.3) !important;
   text-shadow: 0 1px 3px rgba(0,0,0,0.5) !important;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 /*
@@ -218,37 +231,23 @@ body {
 }
 
 .beLocal-btn-filled {
-  background-color: #8ed41e !important;
+  background-color: #78be25 !important;
   color: white !important;
+  border: 1px solid #8BBD3B;
 }
-
 .beLocal-btn-filled:hover {
   background-color: #89cc1d !important;
   color: white;
 }
 
-/*
- * Affix and center
- */
-
 
 @media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-   position: fixed;
-    top: 0;
-  }
-
 
   /* Start the vertical centering */
   .site-wrapper-inner {
     vertical-align: middle;
   }
   /* Handle the widths */
-  .masthead {
-    width:90%;
-  }
-  .mastfoot,
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
   }
@@ -267,6 +266,24 @@ body {
 
   body{
     height: auto;
+  }
+
+  .masthead-nav > li > a {
+    border-bottom: 0px !important;
+  }
+  .masthead-nav > li > a:hover,
+  .masthead-nav > li > a:focus {
+    color:rgba(0,0,0,0.5) !important;
+    border-bottom: 0px !important;
+    text-decoration: underline;
+
+  }
+  .masthead-nav > .active > a,
+  .masthead-nav > .active > a:hover,
+  .masthead-nav > .active > a:focus {
+    border-bottom: 0px !important;
+    text-decoration: underline;
+
   }
 
 
