--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -16,17 +16,27 @@ html {
 
 p {
   color: #696969 !important;
+  font-size: 15px;
 }
 
 h1 {
   margin-top: 0px !important;
 }
+
+h2 {
+  margin-top: 0px !important;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 30px;
+}
+
 .fa-facebook-square {
   padding-right:5px;
 }
 
 .content-container {
-  max-width: 650px;
+  max-width: 630px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
   text-align: justify;
@@ -198,10 +208,11 @@ body {
   border-bottom-color: #000;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 820px) {
   .masthead-brand {
     float: left;
   }
+
   .masthead-nav {
     float: right;
     margin-right: 0px;
@@ -217,7 +228,6 @@ body {
   color: #FFF; /* IE8 proofing */
   color: rgba(255,255,255,0.3) !important;
   text-shadow: 0 1px 3px rgba(0,0,0,0.5) !important;
-  position: fixed;
   bottom: 0;
   width: 100%;
 }
@@ -289,4 +299,30 @@ body {
 
 }
 
+/*
+ * Number Circles
+ */
+
+
+
+.numberCircle {
+    border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+
+    width: 50px;
+    height: 50px;
+    padding-top: 10px;
+    margin-top: 0px !important;
+
+    background: transparent;
+    border: 3px solid #333;
+    color: #333;
+    text-align: center;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: 'Libre Baskerville', serif;
+    font-size: 25px !important;
+}
 
