--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -1,5 +1,5 @@
 
-<div class="site-wrapper">
+<div class="body">
         <div class="cover-container">
             <div class="masthead clearfix">
                 <div class="inner">
@@ -18,17 +18,16 @@
                 <div class="tab-pane active" id="home">
                     <div class="inner">
                         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
-                        <br>
-                        <p class="how-it-works"><b>Our mission:</b> To Connect you with local food around you.</p>
-                        <div align="center" class="content-container">
+                        <p class="how-it-works">Our mission here at belocal:<br> To Connect you with locally sourced food.</p>
+                        <div align="center" class="content-container"><br>
                             <p>
                                 Start tapping into Victoria’s rich local food scene by supporting farmers and foodmakers who are dedicated to producing the highest quality products using sustainable techniques. Join the beLocal community today to start exploring the freshest locally produced food available in your neighbourhood.
                             </p>
                         </div>
                         <br><br>
                         <p class="getting-started-font">To begin browsing without creating an account, click Get Started below.</p>
-                         (or click on the links above to register as a Foodie or Local Farmer)
-                        <br><br>
+                        <class style="font-size: 15px;">(or click on the links above to register as either a Foodie or Local Farmer)</class>
+                        <br><br><br>
                             <a ng-click="getStarted()" class="btn btn-lg beLocal-btn-filled">Get Started</a>
 
 
@@ -40,20 +39,27 @@
                         <span>
                             <p class="how-it-works">Do you find yourself with the craving to start shopping locally? <br>Here's how belocal Works...</p>
                         </span>
+                        <br>
                         <div class="container">
                             <!-- Example row of columns -->
                             <div class="row">
                                 <div class="col-md-4">
+                                    <h2 class="numberCircle">1</h2>
                                     <h2>Search</h2>
-                                    <p>Search for products, markets and local foodmakers in your area.</p>
+                                    <p>Search for products, local markets, and local foodmakers in your neighbourhood.</p>
+                                    <br>
                                 </div>
                                 <div class="col-md-4">
+                                    <h2 class="numberCircle">2</h2>
                                     <h2>Browse</h2>
-                                    <p>Browse individual products at farm stands, markets and stores.</p>
+                                    <p>Browse for in season products, local farmers and foodmakers, or markets in your area.</p>
+                                    <br>
                                 </div>
                                 <div class="col-md-4">
+                                    <h2 class="numberCircle">3</h2>
                                     <h2>Discover</h2>
-                                    <p>Discover new foodmakers and sources of local food from the comfort of your home.</p>
+                                    <p>Discover locally sourced items, farmers and foodmakers, or local markets in your neighbourhood.</p>
+                                    <br>
                                 </div>
                             </div>
                             <br>
@@ -69,20 +75,27 @@
                         <span>
                             <p class="how-it-works">Want to increase your presence within the community? <br>Here's how belocal can help you...</p>
                         </span>
+                        <br>
                         <div class="container">
                             <!-- Example row of columns -->
                             <div class="row">
                                 <div class="col-md-4">
-                                    <h2>Manage Selling Locations</h2>
-                                    <p>List the places where you sell products, including markets, storefronts and farm stands.</p>
+                                    <h2 class="numberCircle">1</h2>
+                                    <h2>Manage Your Locations</h2>
+                                    <p>Let your customers know where your selling, including local markets, so they know where to find you.</p>
+                                    <br>
                                 </div>
                                 <div class="col-md-4">
+                                    <h2 class="numberCircle">2</h2>
                                     <h2>Update Your Inventory</h2>
-                                    <p>List the products you sell. beLocal makes it easy for you to add images and to keep stock up to date.</p>
+                                    <p>Keep customers updated! We make it easy for you keep an up-to-date list of all the items your currently selling.</p>
+                                    <br>
                                 </div>
                                 <div class="col-md-4">
+                                    <h2 class="numberCircle">3</h2>
                                     <h2>Stay Connected</h2>
-                                    <p>Share your latest updates on social media and connect with local customers instantly.</p>
+                                    <p>Quickly share your latest updates, selling locations, and products on your prexisting social media accounts.</p>
+                                    <br>
                                 </div>
                             </div>
                             <br>
@@ -93,9 +106,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mastfoot">
-                   <!-- &copy; 2014 beLocal Victoria -->
-            </div>
+            
         </div>
 </div>
 
