Changed a few strings.

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -18,7 +18,7 @@
                 <div class="tab-pane active" id="home">
                     <div class="inner">
                         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
-                        <p class="how-it-works">Our mission here at belocal:<br> To Connect you with locally sourced food.</p>
+                        <p class="how-it-works">Our mission here at beLocal:<br> To connect you with locally sourced food.</p>
                         <div align="center" class="content-container"><br>
                             <p>
                                 Start tapping into Victoria’s rich local food scene by supporting farmers and foodmakers who are dedicated to producing the highest quality products using sustainable techniques. Join the beLocal community today to start exploring the freshest locally produced food available in your neighbourhood.
@@ -37,7 +37,7 @@
                     <div class="inner">
                         <h1 class="cover-heading">For Local Foodies</h1>
                         <span>
-                            <p class="how-it-works">Do you find yourself with the craving to start shopping locally? <br>Here's how belocal Works...</p>
+                            <p class="how-it-works">Interested in shopping locally? <br>Here's how beLocal works...</p>
                         </span>
                         <br>
                         <div class="container">
@@ -46,19 +46,19 @@
                                 <div class="col-md-4">
                                     <h2 class="numberCircle">1</h2>
                                     <h2>Search</h2>
-                                    <p>Search for products, local markets, and local foodmakers in your neighbourhood.</p>
+                                    <p>Looking for something in particular? We make it easy to search for products, vendors and markets nearby.</p>
                                     <br>
                                 </div>
                                 <div class="col-md-4">
                                     <h2 class="numberCircle">2</h2>
                                     <h2>Browse</h2>
-                                    <p>Browse for in season products, local farmers and foodmakers, or markets in your area.</p>
+                                    <p>Want to know what's being sold in your area? Browse markets and vendor products from the comfort of your home.</p>
                                     <br>
                                 </div>
                                 <div class="col-md-4">
                                     <h2 class="numberCircle">3</h2>
                                     <h2>Discover</h2>
-                                    <p>Discover locally sourced items, farmers and foodmakers, or local markets in your neighbourhood.</p>
+                                    <p>beLocal is designed to help you easily discover new products, markets, and vendors in your community.</p>
                                     <br>
                                 </div>
                             </div>
@@ -82,13 +82,13 @@
                                 <div class="col-md-4">
                                     <h2 class="numberCircle">1</h2>
                                     <h2>Manage Your Locations</h2>
-                                    <p>Let your customers know where your selling, including local markets, so they know where to find you.</p>
+                                    <p>Let your customers know where you're selling, including local markets, so they know where to find you.</p>
                                     <br>
                                 </div>
                                 <div class="col-md-4">
                                     <h2 class="numberCircle">2</h2>
                                     <h2>Update Your Inventory</h2>
-                                    <p>Keep customers updated! We make it easy for you keep an up-to-date list of all the items your currently selling.</p>
+                                    <p>Keep customers updated! We make it easy for you keep an up-to-date list of all the items you're currently selling.</p>
                                     <br>
                                 </div>
                                 <div class="col-md-4">
