--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -39,7 +39,7 @@ h2 {
   padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
-  text-align: justify;
+  text-align: center;
 }
 
 .getting-started-font{
@@ -170,7 +170,6 @@ body {
 .inner {
   padding: 10px 15px 10px 15px;
 }
-
 
 /*
  * Header
